[project]
name = "smcb-unlocker"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.3",
    "pydantic==2.12.4",
    "pydantic-settings[yaml]==2.12.0",
    "websockets==15.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
