[project]
name = "smcb-unlocker"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.3",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "pydantic-settings[yaml]==2.12.0",
    "websockets==15.0.1",
    "sentry-sdk (==2.44.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.pytest]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest (==9.0.0)",
    "pytest-asyncio (==1.3.0)"
]
