[project]
name = "smcb-unlocker"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.3",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "pydantic-settings[yaml]==2.12.0",
    "websockets==15.0.1",
    "sentry-sdk (==2.44.0)",
    "google-cloud-logging (==3.12.1)",
    "cronsim (==2.7)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest (==8.4.2)",
    "pytest-asyncio (==1.3.0)",
    "pytest-httpx (==0.35.0)",
    "pytest-mock (==3.15.1)",
    "pytest-cov (==7.0.0)"
]
